--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
 	<script src="gitgraph.js/src/gitgraph.js"></script>
 </head>
 <body>
-	<canvas id="gitGraph"></canvas>
+	<canvas id="featureBranch" style="border: 1px solid"></canvas>
+	<canvas id="submoduleUpdate" style="border: 1px solid"></canvas>
+	<canvas id="tagAndFix" style="border: 1px solid"></canvas>
 	<script>
-	
-	var gitgraph = new GitGraph();
-	
-	var master = gitgraph.branch("master");
-	master.commit().commit();
-	var branch = master.branch("develop");
-	branch.commit();
-	master.commit().commit();
-	branch.commit().commit();
-	branch.merge(master);
-	
+
+	var featureBranchWorkflow = new GitGraph({elementId: "featureBranch"});
+	{
+		var master = featureBranchWorkflow.branch("master");
+		master.commit().commit();
+		var branch = master.branch("feature");
+		branch.commit();
+		master.commit();
+		branch.commit().commit();
+		branch.merge(master);
+		master.commit();
+	}
+
+	var tagAndFixWorkflow = new GitGraph({elementId: "tagAndFix"});
+	{
+		var master = tagAndFixWorkflow.branch("master");
+		master.commit().commit();
+	}
+
 	</script>
 </body>
 </html>
